--- a/src/flavor/apache/etc/apache2/apache2.conf
+++ b/src/flavor/apache/etc/apache2/apache2.conf
@@ -5,6 +5,8 @@
 # Core Settings
 ServerRoot "/etc/apache2"
 DefaultRuntimeDir ${APACHE_RUN_DIR}
+Mutex file:${APACHE_LOCK_DIR} default
+PassEnv APACHE_DOCUMENT_ROOT
 PidFile ${APACHE_PID_FILE}
 
 # Performance Settings - Optimized for HTTP/2
@@ -87,7 +89,7 @@ ServerName localhost
 </Directory>
 
 # Logging Configuration - Container optimized
-ErrorLog /proc/self/fd/2
+ErrorLog ${APACHE_ERROR_LOG_FILE}
 LogLevel warn
 
 # Custom log formats with performance metrics
@@ -103,7 +105,7 @@ LogLevel warn
     LogFormat "{\"time\":\"%t\",\"remote_ip\":\"%a\",\"host\":\"%V\",\"request\":\"%U\",\"query\":\"%q\",\"method\":\"%m\",\"status\":\"%>s\",\"user_agent\":\"%{User-Agent}i\",\"referer\":\"%{Referer}i\",\"response_time\":\"%{ms}T\"}" json_log
 
     # Emit to stdout by default; switch to json_log if desired.
-    CustomLog /proc/self/fd/1 combined_time
+    CustomLog ${APACHE_ACCESS_LOG} combined_time
 </IfModule>
 
 # Include module configuration
