--- a/src/flavor/apache/etc/apache2/conf-available/vhost-common.conf
+++ b/src/flavor/apache/etc/apache2/conf-available/vhost-common.conf
@@ -3,7 +3,7 @@
 #==============================================================================
 
 ServerAdmin webmaster@localhost
-DocumentRoot /var/www/app/web
+DocumentRoot ${APACHE_DOCUMENT_ROOT}
 
 # Directory configuration with enhanced security
 <Directory /var/www/app/web>
@@ -32,7 +32,7 @@ DocumentRoot /var/www/app/web
         RewriteRule .* - [F,L]
 
         # Block suspicious user agents
-        RewriteCond %{REQUEST_URI} !^/health(\.php)?$ [NC]
+        RewriteCond %{REQUEST_URI} !^/(health(\.php)?|fpm-(ping|status))$ [NC]
         RewriteCond %{HTTP_USER_AGENT} ^$ [OR]
         RewriteCond %{HTTP_USER_AGENT} ^(java|curl|wget) [NC,OR]
         RewriteCond %{HTTP_USER_AGENT} (libwww|lwp-trivial|echo|bot|wget|curl|python|perl|scan) [NC]
@@ -40,8 +40,7 @@ DocumentRoot /var/www/app/web
 
         # Redirect trailing slashes if not a directory
         RewriteCond %{REQUEST_FILENAME} !-d
-        RewriteCond %{REQUEST_URI} (.+)/$
-        RewriteRule ^ %1 [L,R=301]
+        RewriteRule ^(.+?)/$ $1 [R=301,L]
 
         # Send all non-existing files to index.php
         RewriteCond %{REQUEST_FILENAME} !-f
@@ -115,7 +114,7 @@ DocumentRoot /var/www/app/web
 </IfModule>
 
 # Don't log health checks
-SetEnvIf Request_URI "^/health$" no_log
+SetEnvIf Request_URI "^/(health(\.php)?|fpm-(ping|status))$" no_log
 
 # Logging
 ErrorLog /proc/self/fd/2
