--- a/src/flavor/apache/etc/apache2/conf-available/security.conf
+++ b/src/flavor/apache/etc/apache2/conf-available/security.conf
@@ -115,21 +115,27 @@ TraceEnable Off
     # Referrer policy for privacy
     Header always setifempty Referrer-Policy "strict-origin-when-cross-origin"
 
-    # Remove server information from headers
+    # Remove X-Powered-By; ServerTokens Prod handles Server header
     Header always unset "X-Powered-By"
     Header unset "X-Powered-By"
-    Header always unset "Server"
 
     # Permissions policy (formerly Feature Policy)
     Header always setifempty Permissions-Policy "camera=(), microphone=(), geolocation=(), interest-cohort=()"
 
-    # Prefer defining CSP once (vhost or separate csp.conf). If kept here, use setifempty and align sources with app needs.
-    Header always setifempty Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self'"
+    # Prefer defining CSP once in main config, but set a basic one here
+    Header always setifempty Content-Security-Policy "\
+        default-src 'self'; \
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; \
+        style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; \
+        img-src 'self' data: https:; \
+        font-src 'self' data: https://cdn.jsdelivr.net; \
+        connect-src 'self'; \
+        frame-ancestors 'self'"
 
     # Cross-Origin policies
-    Header always set Cross-Origin-Embedder-Policy "require-corp"
-    Header always set Cross-Origin-Opener-Policy "same-origin"
-    Header always set Cross-Origin-Resource-Policy "same-origin"
+    Header always setifempty Cross-Origin-Embedder-Policy "require-corp"
+    Header always setifempty Cross-Origin-Opener-Policy "same-origin"
+    Header always setifempty Cross-Origin-Resource-Policy "same-origin"
 </IfModule>
 
 #==============================================================================
@@ -140,9 +146,6 @@ TraceEnable Off
     <IfModule mod_headers.c>
         # HTTP Strict Transport Security (HSTS)
         Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-
-        # Expect-CT header for certificate transparency
-        Header always set Expect-CT "max-age=86400, enforce"
     </IfModule>
 </IfModule>
 
