--- a/src/php-fpm/docker.conf
+++ b/src/php-fpm/docker.conf
@@ -16,61 +16,64 @@ listen.group = www-data
 listen.mode = 0660
 listen.owner = www-data
 
+; Access log - can be disabled in prod
+access.format = "%R - %u %t \"%m %r%Q%q\" %s %{mili}d %{kilo}M %C%%"
+access.log = ${PHP_FPM_ACCESS_LOG}
+
+; Output control
+catch_workers_output = ${PHP_FPM_CATCH_OUTPUT}
+clear_env = no
+decorate_workers_output = no
+
+; PHP Core Configuration
+php_admin_value[max_execution_time] = ${PHP_MAX_EXECUTION_TIME}
+php_admin_value[max_file_uploads] = ${PHP_MAX_FILE_UPLOADS}
+php_admin_value[max_input_time] = ${PHP_MAX_INPUT_TIME}
+php_admin_value[max_input_vars] = ${PHP_MAX_INPUT_VARS}
+php_admin_value[memory_limit] = ${PHP_MEMORY_LIMIT}
+php_admin_value[post_max_size] = ${PHP_POST_MAX_SIZE}
+php_admin_value[upload_max_filesize] = ${PHP_UPLOAD_MAX_FILESIZE}
+php_value[sys_temp_dir] = /var/lib/php/tmp
+php_value[upload_tmp_dir] = /var/lib/php/tmp
+
+; PHP Error Configuration
+php_admin_flag[display_errors] = ${PHP_DISPLAY_ERRORS}
+php_admin_flag[display_startup_errors] = ${PHP_DISPLAY_STARTUP_ERRORS}
+php_admin_value[error_log] = ${PHP_ERROR_LOG}
+php_admin_value[error_reporting] = ${PHP_ERROR_REPORTING}
+php_admin_value[expose_php] = ${PHP_EXPOSE}
+php_admin_flag[log_errors] = ${PHP_LOG_ERRORS}
+
+; PHP Security Configuration
+php_admin_flag[allow_url_fopen] = ${PHP_ALLOW_URL_FOPEN}
+php_admin_flag[allow_url_include] = ${PHP_ALLOW_URL_INCLUDE}
+php_admin_value[cgi.fix_pathinfo] = 0
+php_admin_value[date.timezone] = ${PHP_DATE_TIMEZONE}
+php_admin_value[disable_functions] = ${PHP_DISABLE_FUNCTIONS}
+
+; PHP Session Configuration
+php_value[session.save_handler] = ${PHP_SESSION_HANDLER}
+php_value[session.save_path] = ${PHP_SESSION_PATH}
+
 ; Process management - adapts to environment via variables
 pm = ${PHP_FPM_PM}
 pm.max_children = ${PHP_FPM_MAX_CHILDREN}
 pm.max_requests = ${PHP_FPM_MAX_REQUESTS}
 pm.max_spare_servers = ${PHP_FPM_MAX_SPARE}
 pm.min_spare_servers = ${PHP_FPM_MIN_SPARE}
-pm.process_idle_timeout = ${PHP_FPM_IDLE_TIMEOUT:-10s}
+pm.process_idle_timeout = ${PHP_FPM_IDLE_TIMEOUT}
 pm.start_servers = ${PHP_FPM_START_SERVERS}
+
+; Request handling
+request_slowlog_timeout = ${PHP_FPM_SLOWLOG_TIMEOUT}
+request_terminate_timeout = ${PHP_FPM_REQUEST_TIMEOUT}
+slowlog = /proc/self/fd/2
+
+; Resource limits
+rlimit_core = 0
+rlimit_files = ${PHP_FPM_RLIMIT_FILES}
 
 ; Status monitoring - disable in prod via environment variable
 ping.path = ${PHP_FPM_PING_PATH}
 pm.status_path = ${PHP_FPM_STATUS_PATH}
 
-; Request handling
-request_slowlog_timeout = ${PHP_SLOWLOG_TIMEOUT}
-request_terminate_timeout = ${PHP_REQUEST_TIMEOUT}
-slowlog = /proc/self/fd/2
-
-; =============================================================================
-; PHP Settings - Runtime configurable via environment variables
-; These override any values in stage-specific .ini files
-; =============================================================================
-php_admin_flag[display_errors] = ${PHP_DISPLAY_ERRORS}
-php_admin_flag[display_startup_errors] = ${PHP_DISPLAY_STARTUP_ERRORS}
-php_admin_flag[log_errors] = on
-php_admin_value[error_log] = /proc/self/fd/2
-php_admin_value[error_reporting] = ${PHP_ERROR_REPORTING}
-php_admin_value[expose_php] = ${PHP_EXPOSE}
-php_admin_value[max_execution_time] = ${PHP_MAX_EXECUTION_TIME}
-php_admin_value[max_input_time] = ${PHP_MAX_INPUT_TIME}
-php_admin_value[memory_limit] = ${PHP_MEMORY_LIMIT}
-php_admin_value[post_max_size] = ${PHP_POST_MAX_SIZE}
-php_admin_value[upload_max_filesize] = ${PHP_UPLOAD_MAX_FILESIZE}
-
-; Session configuration - runtime configurable
-php_value[session.save_handler] = ${PHP_SESSION_HANDLER}
-php_value[session.save_path] = ${PHP_SESSION_PATH}
-
-; Security - runtime configurable
-php_admin_value[cgi.fix_pathinfo] = 0
-php_admin_value[disable_functions] = ${PHP_DISABLE_FUNCTIONS}
-
-; Temporary directories
-php_value[sys_temp_dir] = /var/lib/php/tmp
-php_value[upload_tmp_dir] = /var/lib/php/tmp
-
-; Output control
-catch_workers_output = ${PHP_CATCH_OUTPUT}
-clear_env = no
-decorate_workers_output = no
-
-; Resource limits
-rlimit_core = 0
-rlimit_files = ${PHP_RLIMIT_FILES}
-
-; Access log - can be disabled in prod
-access.format = "%R - %u %t \"%m %r%Q%q\" %s %{mili}d %{kilo}M %C%%"
-access.log = ${PHP_FPM_ACCESS_LOG}
