feat(config): Standardize boolean values in PHP configuration files and enhance Composer installation script with improved error handling and user context management.

--- a/src/php/dev.ini
+++ b/src/php/dev.ini
@@ -3,8 +3,8 @@
 ;==============================================================================
 
 [PHP]
-allow_url_fopen = On
-allow_url_include = Off
+allow_url_fopen = on
+allow_url_include = off
 max_file_uploads = 20
 max_input_vars = 10000
 
