--- a/src/php/full.ini
+++ b/src/php/full.ini
@@ -3,8 +3,8 @@
 ;==============================================================================
 
 [PHP]
-allow_url_fopen = On
-allow_url_include = Off
+allow_url_fopen = on
+allow_url_include = off
 assert.active = 1
 assert.exception = 1
 max_file_uploads = 20
