--- a/src/php/dev.ini
+++ b/src/php/dev.ini
@@ -22,10 +22,10 @@ session.use_strict_mode = 1
 opcache.enable = 1
 opcache.enable_cli = 1
 opcache.interned_strings_buffer = 16
-opcache.jit = tracing
-opcache.jit_buffer_size = 128M
+opcache.jit = 0
+opcache.jit_buffer_size = 0
 opcache.max_accelerated_files = 20000
 opcache.memory_consumption = 256
-opcache.revalidate_freq = 2
+opcache.revalidate_freq = 0
 opcache.save_comments = 1
 opcache.validate_timestamps = 1
