fix(env): Correct PHP_ERROR_REPORTING syntax by adding quotes.

--- a/src/.env.example
+++ b/src/.env.example
@@ -30,7 +30,7 @@ PHP_UPLOAD_MAX_FILESIZE=100M
 PHP_DISPLAY_ERRORS=on
 PHP_DISPLAY_STARTUP_ERRORS=off
 PHP_ERROR_LOG=/proc/self/fd/2
-PHP_ERROR_REPORTING=E_ALL & ~E_DEPRECATED
+PHP_ERROR_REPORTING="E_ALL & ~E_DEPRECATED"
 PHP_EXPOSE=off
 PHP_LOG_ERRORS=on
 
