feat(apache): Enhance PHP and PHP-FPM configuration with dynamic environment variables. (#7)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,3 +107,7 @@ jobs:
         else
           echo "ℹ️ Image built but not pushed (PR mode)"
         fi
+
+    - name: Clear old GitHub Actions caches.
+      if: ${{ matrix.build_type == 'full' }}
+      uses: easimon/wipe-cache@main
