fix(build): Update cache clearing condition to trigger on push events only for full builds.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,5 +108,5 @@ jobs:
         fi
 
     - name: Clear old GitHub Actions caches.
-      if: ${{ matrix.build_type == 'full' }}
+      if: ${{ github.event_name == 'push' && matrix.build_type == 'full' }}
       uses: easimon/wipe-cache@main
