feat(apache): Add SSL configuration and self-signed certificate generation for HTTP/2 support.

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,11 @@ PHP_FPM_RLIMIT_FILES=131072
 PHP_FPM_SLOWLOG_TIMEOUT=5s
 PHP_FPM_START_SERVERS=5
 PHP_FPM_STATUS_PATH=/fpm-status
+
+# SSL Configuration
+SSL_AUTO_GENERATE=true
+SSL_CERT_FILE=/etc/apache2/ssl/cert.pem
+SSL_CHAIN_FILE=/etc/apache2/ssl/chain.pem
+SSl_DIR=/etc/apache2/ssl
+SSL_ENABLED=true
+SSL_KEY_FILE=/etc/apache2/ssl/key.pem
