--- a/src/flavor/apache/etc/apache2.conf
+++ b/src/flavor/apache/etc/apache2.conf
@@ -120,17 +120,19 @@ Listen 80
 
     # Modern SSL/TLS Configuration for HTTP/2
     SSLProtocol -all +TLSv1.2 +TLSv1.3
-    SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
+    SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305
     SSLHonorCipherOrder off
     SSLSessionTickets off
     SSLSessionCache "shmcb:/var/cache/apache2/ssl_scache(512000)"
     SSLSessionCacheTimeout 300
 
-    # OCSP Stapling
-    SSLUseStapling on
-    SSLStaplingCache "shmcb:/var/cache/apache2/ssl_stapling(32768)"
-    SSLStaplingResponderTimeout 5
-    SSLStaplingReturnResponderErrors off
+    # OCSP Stapling (disabled for self-signed certificates)
+    <IfDefine !DISABLE_OCSP_STAPLING>
+        SSLUseStapling on
+        SSLStaplingCache "shmcb:/var/cache/apache2/ssl_stapling(32768)"
+        SSLStaplingResponderTimeout 5
+        SSLStaplingReturnResponderErrors off
+    </IfDefine>
 </IfModule>
 
 # Security Headers - Global
