--- a/src/flavor/apache/etc/apache2.conf
+++ b/src/flavor/apache/etc/apache2.conf
@@ -127,7 +127,7 @@ Listen 80
     SSLSessionCacheTimeout 300
 
     # OCSP Stapling (disabled for self-signed certificates)
-    <IfDefine !DISABLE_OCSP_STAPLING>
+    <IfDefine !APACHE_DISABLE_OCSP_STAPLING>
         SSLUseStapling on
         SSLStaplingCache "shmcb:/var/cache/apache2/ssl_stapling(32768)"
         SSLStaplingResponderTimeout 5
