--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ APACHE_PID_FILE=/var/run/apache2/apache2.pid
 APACHE_RUN_DIR=/var/run/apache2
 APACHE_RUN_GROUP=www-data
 APACHE_RUN_USER=www-data
+# Optional: Enable HTTP to HTTPS redirect
+APACHE_DISABLE_OCSP_STAPLING=true
+APACHE_SSL_ENABLED=true
+APACHE_SSL_REDIRECT=false
 
 # Docker Build Configuration
 BUILD_TYPE=dev
@@ -62,9 +66,5 @@ PHP_FPM_START_SERVERS=5
 PHP_FPM_STATUS_PATH=/fpm-status
 
 # SSL Configuration
-SSL_AUTO_GENERATE=true
-SSL_CERT_FILE=/etc/apache2/ssl/cert.pem
-SSL_CHAIN_FILE=/etc/apache2/ssl/chain.pem
-SSl_DIR=/etc/apache2/ssl
-SSL_ENABLED=true
+SSL_DIR=/etc/apache2/ssl
 SSL_KEY_FILE=/etc/apache2/ssl/key.pem
