--- a/src/flavor/apache/etc/sites-available/vhost.conf
+++ b/src/flavor/apache/etc/sites-available/vhost.conf
@@ -11,15 +11,17 @@
     Include /etc/apache2/conf-available/vhost-common.conf
 
     # Optional: Redirect to HTTPS if SSL is enabled
-    <IfDefine SSL_REDIRECT>
+    <IfDefine APACHE_SSL_REDIRECT>
         RewriteEngine On
+        # If behind a proxy, trust X-Forwarded-Proto (ensure mod_remoteip is configured if needed)
+        RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
         RewriteCond %{HTTPS} off
-        RewriteRule ^(.*)$ https://%{HTTP_HOST}$1 [R=301,L]
+        RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
     </IfDefine>
 </VirtualHost>
 
 # HTTPS Virtual Host with HTTP/2 Support
-<IfDefine SSL_ENABLED>
+<IfDefine APACHE_SSL_ENABLED>
 <VirtualHost *:443>
     # Enable HTTP/2 and HTTP/1.1 over SSL
     Protocols h2 http/1.1
