--- a/src/flavor/apache/etc/ssl/openssl.conf
+++ b/src/flavor/apache/etc/ssl/openssl.conf
@@ -13,7 +13,8 @@ CN = localhost
 
 [v3_req]
 basicConstraints = CA:FALSE
-keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+keyUsage = digitalSignature, keyEncipherment
+extendedKeyUsage = serverAuth
 subjectAltName = @alt_names
 
 [alt_names]
