--- a/src/flavor/apache/etc/apache2.conf
+++ b/src/flavor/apache/etc/apache2.conf
@@ -126,13 +126,11 @@ Listen 80
     SSLSessionCache "shmcb:/var/cache/apache2/ssl_scache(512000)"
     SSLSessionCacheTimeout 300
 
-    # OCSP Stapling (disabled for self-signed certificates)
-    <IfDefine !APACHE_DISABLE_OCSP_STAPLING>
-        SSLUseStapling on
-        SSLStaplingCache "shmcb:/var/cache/apache2/ssl_stapling(32768)"
-        SSLStaplingResponderTimeout 5
-        SSLStaplingReturnResponderErrors off
-    </IfDefine>
+    # OCSP Stapling (can be dynamically disabled by 30-ssl.sh for self-signed certificates)
+    SSLUseStapling on
+    SSLStaplingCache "shmcb:/var/cache/apache2/ssl_stapling(32768)"
+    SSLStaplingResponderTimeout 5
+    SSLStaplingReturnResponderErrors off
 </IfModule>
 
 # Security Headers - Global
