feat(apache): Add SSL configuration and self-signed certificate generation for HTTP/2 support. (#10)

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ APACHE_PID_FILE=/var/run/apache2/apache2.pid
 APACHE_RUN_DIR=/var/run/apache2
 APACHE_RUN_GROUP=www-data
 APACHE_RUN_USER=www-data
+# Optional: Enable HTTP to HTTPS redirect
+APACHE_SSL_ENABLED=true
+APACHE_SSL_REDIRECT=false
 
 # Docker Build Configuration
 BUILD_TYPE=dev
@@ -60,3 +63,7 @@ PHP_FPM_RLIMIT_FILES=131072
 PHP_FPM_SLOWLOG_TIMEOUT=5s
 PHP_FPM_START_SERVERS=5
 PHP_FPM_STATUS_PATH=/fpm-status
+
+# SSL Configuration
+SSL_DIR=/etc/apache2/ssl
+SSL_KEY_FILE=/etc/apache2/ssl/key.pem
