--- a/src/flavor/apache/etc/sites-available/vhost-ssl.conf
+++ b/src/flavor/apache/etc/sites-available/vhost-ssl.conf
@@ -1,31 +1,21 @@
 #==============================================================================
-# Apache Virtual Host Configuration for Yii2 with HTTP/2 Support
+# Apache Virtual Host Configuration for Yii2 with HTTP/2 and Redirect to HTTPS
 #==============================================================================
 
-# HTTP Virtual Host
-<VirtualHost *:80>
-    # Enable HTTP/2 cleartext and HTTP/1.1
-    Protocols h2c http/1.1
-
-    # Include common configuration
-    Include /etc/apache2/conf-available/vhost-common.conf
-</VirtualHost>
-
-# HTTPS Virtual Host with HTTP/2 Support
+# HTTPS Virtual Host
 <VirtualHost *:443>
     # Enable HTTP/2 and HTTP/1.1 over SSL
     Protocols h2 http/1.1
 
-    # SSL Configuration
+    # SSL Configuration - paths will be updated by 30-ssl.sh script
+    # SSLCertificateChainFile will be added dynamically if needed
     SSLEngine on
     SSLCertificateFile /etc/apache2/ssl/cert.pem
     SSLCertificateKeyFile /etc/apache2/ssl/key.pem
 
-    # Modern SSL/TLS Configuration
-    SSLProtocol -all +TLSv1.2 +TLSv1.3
-    SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
-    SSLHonorCipherOrder off
-    SSLSessionTickets off
+    # Note: Modern SSL/TLS configuration (SSLProtocol, SSLCipherSuite, etc.)
+    # is defined globally in apache2.conf and inherited by this virtual host.
+    # Only override here if you need site-specific SSL settings.
 
     # HSTS (HTTP Strict Transport Security)
     <IfModule mod_headers.c>
