--- a/src/flavor/apache/etc/apache2.conf
+++ b/src/flavor/apache/etc/apache2.conf
@@ -120,13 +120,13 @@ Listen 80
 
     # Modern SSL/TLS Configuration for HTTP/2
     SSLProtocol -all +TLSv1.2 +TLSv1.3
-    SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
+    SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305
     SSLHonorCipherOrder off
     SSLSessionTickets off
     SSLSessionCache "shmcb:/var/cache/apache2/ssl_scache(512000)"
     SSLSessionCacheTimeout 300
 
-    # OCSP Stapling
+    # OCSP Stapling (can be dynamically disabled by 30-ssl.sh for self-signed certificates)
     SSLUseStapling on
     SSLStaplingCache "shmcb:/var/cache/apache2/ssl_stapling(32768)"
     SSLStaplingResponderTimeout 5
